--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>giphy</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Cinzel+Decorative|Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/css-reset.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"                      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" />
+
+</head>
+<body>
+    <form>
+        Enter Search Term: <input id="searchTerm" type="text"><br>
+        <input id="submit" type="submit" value="Submit">
+    </form>
+    <div id="buttonContainer">
+        <button data-animal="cat">meow</button>
+        <button data-animal="dog">woof</button>
+        <button data-animal="bird">chirp</button>
+    </div>  
+    <div id="gifs-appear-here">
+    </div>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>        <!-- Script -->
+    <script type="text/javascript" src="assets/javascript/giphy.js"></script>
+
+</body>
+</html>
