updated logic to allow user to create API search button based on their term and pull results.  Also implemented pause, play functionality on the gifs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button data-animal="dog">woof</button>
         <button data-animal="bird">chirp</button>
     </div>  
-    <div id="gifs-appear-here">
+    <div id="gifHolder">
     </div>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>        <!-- Script -->
